--- a/index.html
+++ b/index.html
@@ -22,7 +22,36 @@
 <body>
     <div id="ar-container"></div>
 
-    <script type="module" src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.150.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.3.2/dist/mindar-image-three.prod.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", async () => {
+
+            const mindarThree = new window.MINDAR.IMAGE.MindARThree({
+                container: document.body,
+                imageTargetSrc: "./assets/tabuleiro.mind",
+            });
+
+            const { renderer, scene, camera } = mindarThree;
+
+            const anchor = mindarThree.addAnchor(0);
+
+            const geometry = new THREE.BoxGeometry(0.5, 0.5, 0.5);
+            const material = new THREE.MeshNormalMaterial();
+            const cube = new THREE.Mesh(geometry, material);
+            anchor.group.add(cube);
+
+            await mindarThree.start();
+
+            renderer.setAnimationLoop(() => {
+                renderer.render(scene, camera);
+                cube.rotation.y += 0.01;
+            });
+
+        });
+    </script>
+
 </body>
 
 </html>
