--- a/index.html
+++ b/index.html
@@ -1,57 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Jogo AR - Tabuleiro</title>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.150.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.3.2/dist/mindar-image-three.prod.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
 
-        #ar-container {
-            width: 100vw;
-            height: 100vh;
-        }
-    </style>
+    <!-- A-Frame e MindAR -->
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.3.2/dist/mindar-image-aframe.prod.js"></script>
 </head>
 
 <body>
-    <div id="ar-container"></div>
+    <a-scene mindar-image="imageTargetSrc: ./assets/tabuleiro.mind;" color-space="sRGB"
+        renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
+        device-orientation-permission-ui="enabled: false">
 
-    <script src="https://cdn.jsdelivr.net/npm/three@0.150.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.3.2/dist/mindar-image-three.prod.js"></script>
+        <!-- Assets -->
+        <a-assets>
+            <img id="tabuleiro" src="./assets/tabuleiro.png" />
+            <!-- opcional: modelo 3D -->
+            <a-asset-item id="modelo3D" src="./assets/modelo.gltf"></a-asset-item>
+        </a-assets>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", async () => {
+        <!-- Câmera -->
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-            const mindarThree = new window.MINDAR.IMAGE.MindARThree({
-                container: document.body,
-                imageTargetSrc: "./assets/tabuleiro.mind",
-            });
+        <!-- Âncora do tabuleiro -->
+        <a-entity mindar-image-target="targetIndex: 0">
 
-            const { renderer, scene, camera } = mindarThree;
+            <!-- Cubo teste -->
+            <a-box position="0 0 0.25" rotation="0 45 0" width="0.5" height="0.5" depth="0.5" color="#4CC3D9">
+                <a-animation attribute="rotation" to="0 405 0" dur="4000" repeat="indefinite"></a-animation>
+            </a-box>
 
-            const anchor = mindarThree.addAnchor(0);
+            <!-- Modelo 3D opcional -->
+            <!--
+        <a-gltf-model src="#modelo3D" position="0 0 0.1" scale="0.01 0.01 0.01"></a-gltf-model>
+        -->
 
-            const geometry = new THREE.BoxGeometry(0.5, 0.5, 0.5);
-            const material = new THREE.MeshNormalMaterial();
-            const cube = new THREE.Mesh(geometry, material);
-            anchor.group.add(cube);
+        </a-entity>
 
-            await mindarThree.start();
-
-            renderer.setAnimationLoop(() => {
-                renderer.render(scene, camera);
-                cube.rotation.y += 0.01;
-            });
-
-        });
-    </script>
-
+    </a-scene>
 </body>
 
 </html>
