tentando exibir modelo glb

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a-assets>
             <img id="tabuleiro" src="./assets/tabuleiro.png" />
             <!-- opcional: modelo 3D -->
-            <a-asset-item id="modelo3D" src="./assets/modelo.gltf"></a-asset-item>
+            <a-asset-item id="modelo3D" src="./assets/model.glb"></a-asset-item>
         </a-assets>
 
         <!-- Câmera -->
