ativa a permissão de orientação do dispositivo no MindAR

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <a-scene mindar-image="imageTargetSrc: ./assets/tabuleiro.mind;" color-space="sRGB"
         renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
+        device-orientation-permission-ui="enabled: true">
 
         <!-- Assets -->
         <a-assets>
