--- a/index.html
+++ b/index.html
@@ -1,46 +1,27 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 
 <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jogo AR - Tabuleiro</title>
-
-    <!-- A-Frame e MindAR -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.3.2/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 </head>
 
 <body>
     <a-scene mindar-image="imageTargetSrc: ./assets/tabuleiro.mind;" color-space="sRGB"
         renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true">
-
-        <!-- Assets -->
         <a-assets>
-            <img id="tabuleiro" src="./assets/tabuleiro.png" />
-            <!-- opcional: modelo 3D -->
-            <a-asset-item id="modelo3D" src="./assets/model.glb"></a-asset-item>
+            <!-- <img id="card"
+                src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" /> -->
+            <a-asset-item id="avatarModel" src="./assets/model.glb"></a-asset-item>
         </a-assets>
 
-        <!-- Câmera -->
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-        <!-- Âncora do tabuleiro -->
         <a-entity mindar-image-target="targetIndex: 0">
-
-            <!-- Cubo teste -->
-            <a-box position="0 0 0.25" rotation="0 45 0" width="0.5" height="0.5" depth="0.5" color="#4CC3D9">
-                <a-animation attribute="rotation" to="0 405 0" dur="4000" repeat="indefinite"></a-animation>
-            </a-box>
-
-            <!-- Modelo 3D opcional -->
-            <!--
-        <a-gltf-model src="#modelo3D" position="0 0 0.1" scale="0.01 0.01 0.01"></a-gltf-model>
-        -->
-
+            <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+            <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
         </a-entity>
-
     </a-scene>
 </body>
 
