--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
         <a-entity mindar-image-target="targetIndex: 0">
-            <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-            <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
+            <!-- Eixos X (Vermelho), Y (Verde), Z (Azul) -->
+            <a-entity position="0 0 0">
+                <!-- Eixo X - Vermelho -->
+                <a-box position="0.25 0 0" width="0.05" height="0.05" depth="0.05" color="red"></a-box>
+                <!-- Eixo Y - Verde -->
+                <a-box position="0 0.25 0" width="0.005" height="0.5" depth="0.05" color="green"></a-box>
+                <!-- Eixo Z - Azul -->
+                <a-box position="0 0 0.25" width="0.005" height="0.05" depth="0.05" color="blue"></a-box>
+            </a-entity>
+            <!-- <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane> -->
+            <a-gltf-model rotation="90 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
         </a-entity>
     </a-scene>
