--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
+    <title>Projeto Final IREDE</title>
 </head>
 
 <body>
@@ -12,26 +14,38 @@
         device-orientation-permission-ui="enabled: true">
         <a-assets>
             <!-- <img id="card"
-                src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" /> -->
-            <a-asset-item id="avatarModel" src="./assets/ring final.glb"></a-asset-item>
+                    src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" /> -->
+            <a-asset-item id="boardModel" src="./assets/ring final.glb"></a-asset-item>
+            <a-asset-item id="characterModel" src="./assets/kettle_samurai.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
         <a-entity mindar-image-target="targetIndex: 0">
-            <!-- Eixos X (Vermelho), Y (Verde), Z (Azul) -->
-            <!-- <a-entity position="0 0 0">
-
-                <a-box position="0.25 0 0" width="0.05" height="0.05" depth="0.05" color="red"></a-box>
-
-                <a-box position="0 0.25 0" width="0.005" height="0.5" depth="0.05" color="green"></a-box>
-
-                <a-box position="0 0 0.25" width="0.005" height="0.05" depth="0.05" color="blue"></a-box>
-            </a-entity> -->
-            <!-- <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane> -->
-            <a-gltf-model rotation="90 0 0 " position="0 0 0.1" scale="0.05 0.05 0.05" src="#avatarModel"
+            <!-- Modelo do ring -->
+            <a-entity gltf-model="#boardModel" rotation="90 0 0" position="0 0 0.1" scale="0.05 0.05 0.05"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-entity>
+
+            <!-- Modelo do personagem -->
+            <a-entity id="character" gltf-model="#characterModel" rotation="90 0 0" position="0 0 0.2"
+                scale="0.2 0.2 0.2" animation-mixer="clip: 4Combo_3; loop: repeat"></a-entity>
         </a-entity>
     </a-scene>
+
+    <script>
+        const loader = new THREE.GLTFLoader();
+        loader.load('./assets/kettle_samurai.glb', (gltf) => {
+            console.log(gltf.animations);
+        });
+
+        const character = document.querySelector('#character');
+
+        character.addEventListener('model-loaded', () => {
+            character.setAttribute('animation-mixer', { clip: '4Combo_3', loop: 'repeat' });
+            console.log('Modelo carregado e animação iniciada.');
+        });
+
+    </script>
 </body>
 
 </html>
