--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a-scene mindar-image="imageTargetSrc: ./assets/tabuleiro.mind;" color-space="sRGB"
+    <a-scene mindar-image="imageTargetSrc: ./assets/tabuleiro - escala 8.mind" color-space="sRGB"
         renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true">
         <a-assets>
@@ -20,16 +20,31 @@
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
         <a-entity mindar-image-target="targetIndex: 0">
-            <!-- Modelo do ring -->
-            <a-entity gltf-model="#boardModel" rotation="90 0 0" position="0 0 0.1" scale="0.05 0.05 0.05"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            <a-entity id="group" position="0 0 0" rotation="0 0 0">
+
+                <!-- Modelo do ring -->
+                <a-entity gltf-model="#boardModel" rotation="90 0 0" position="0 0 0" scale="0.05 0.05 0.05"
+                    axes-helper="size: 0.5"
+                    animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+                </a-entity>
+
+                <!-- Modelo do personagem 1-->
+                <a-entity id="character" gltf-model="#characterModel" rotation="90 0 0" position="0 0.3 0.1"
+                    scale="0.15 0.15 0.15"></a-entity>
+
+
+                <!-- Modelo do personagem 2-->
+                <a-entity id="character2" gltf-model="#characterModel" rotation="90 0 0" position="0 -0.3 0.2"
+                    scale="-0.15 0.15 -0.15"></a-entity>
+
+
+
             </a-entity>
 
-            <!-- Modelo do personagem -->
-            <a-entity id="character" gltf-model="#characterModel" rotation="90 0 0" position="0 0 0.2"
-                scale="0.2 0.2 0.2" animation-mixer="clip: 4Combo_3; loop: repeat"></a-entity>
         </a-entity>
+
     </a-scene>
 
     <script>
@@ -41,9 +56,12 @@
         const character = document.querySelector('#character');
 
         character.addEventListener('model-loaded', () => {
-            character.setAttribute('animation-mixer', { clip: '4Combo_3', loop: 'repeat' });
+            // character.setAttribute('animation-mixer', { clip: '4Combo_3', loop: 'repeat' });
             console.log('Modelo carregado e animação iniciada.');
         });
+
+
+
 
     </script>
 </body>
