--- a/index.html
+++ b/index.html
@@ -6,35 +6,59 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
     <title>Projeto Final IREDE</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <div id="initialScreen">
+    <!-- <div id="initialScreen">
         <div class="initial-content">
             <h1>Projeto Final IREDE</h1>
             <button id="playButton">Jogar</button>
             <button id="howToPlayButton">Como Jogar</button>
             <button id="infoButton">Informações</button>
         </div>
+    </div> -->
+
+
+    <div id="hud">
+        <span>Você</span>
+        <div class="hp-bar">
+
+            <div id="hp1" class="hp-fill"></div>
+        </div>
+
+        <button id="pauseButton" class="bi bi-pause-circle-fill" style="color:black"> Pausar</button>
+
+        <span>Inimigo</span>
+        <div class="hp-bar enemy">
+            <div id="hp2" class="hp-fill"></div>
+        </div>
     </div>
 
 
     <div class="ui-bg">
-        <img src="./assets/card.png" class="card card1" onclick="selectCard(this)">
-        <img src="./assets/card.png" class="card card2" onclick="selectCard(this)">
+        <img src="./assets/card.png" class="card card1" data-type="attack" data-damage="20" data-animation="4Combo_3"
+            onclick="selectCard(this)">
+        <img src="./assets/card.png" class="card card2" data-type="defense" data-block="15" data-animation="Idle"
+            onclick="selectCard(this)">
+        <img src="./assets/card.png" class="card card3" data-type="special" data-damage="35"
+            data-animation="8Jump_sword" onclick="selectCard(this)">
+        <img src="./assets/card.png" class="card card4" data-type="heal" data-heal="10" data-animation="Idle"
+            onclick="selectCard(this)">
 
+        <button id="playCardButton" class="play-button" onclick="playCard()">Jogar Carta</button>
     </div>
 
     <a-scene id="sceneAR" mindar-image="imageTargetSrc: ./assets/inferno.mind; uiScanning:no;" color-space="sRGB"
         renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: true">
+        device-orientation-permission-ui="enabled: false">
         <a-assets>
             <!-- <img id="card"
                     src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" /> -->
-            <a-asset-item id="boardModel" src="./assets/ring final.glb"></a-asset-item>
+            <a-asset-item id="boardModel" src="./assets/dojo.glb"></a-asset-item>
             <a-asset-item id="characterModel" src="./assets/kettle_samurai.glb"></a-asset-item>
         </a-assets>
 
@@ -43,21 +67,23 @@
         <a-entity mindar-image-target="targetIndex: 0">
             <a-entity id="group" position="0 0 0" rotation="0 0 0">
 
-                <!-- Modelo do ring -->
-                <a-entity gltf-model="#boardModel" rotation="90 0 0" position="0 0 0" scale="0.05 0.05 0.05">
+                <!-- Modelo do dojo - rotacionado só no X -->
+
+                <a-entity id="group" position="0 0 0" rotation="0 0 90">
+                    <a-entity id="dojo" gltf-model="#boardModel" rotation="90 0 0" position="0 0 0"
+                        scale="0.15 0.15 0.15">
+                    </a-entity>
                 </a-entity>
 
-                <!-- Modelo do personagem 1-->
-                <a-entity id=" character" gltf-model="#characterModel" rotation="90 0 0" position="0 0.3 0.1"
+                <!-- Modelo do personagem 1 - rotacionado só no X -->
+                <a-entity id="character" gltf-model="#characterModel" rotation="90 0 0" position="0 0.285 0.02"
                     scale="0.15 0.15 0.15"></a-entity>
 
-
-                <!-- Modelo do personagem 2-->
-                <a-entity id="character2" gltf-model="#characterModel" rotation="90 0 0" position="0 -0.3 0.1"
+                <!-- Modelo do personagem 2 - rotacionado só no X -->
+                <a-entity id="character2" gltf-model="#characterModel" rotation="90 0 0" position="0 -0.285 0.02"
                     scale="-0.15 0.15 -0.15"></a-entity>
 
             </a-entity>
-
         </a-entity>
 
     </a-scene>
@@ -65,7 +91,12 @@
     <script>
         const playButton = document.getElementById('playButton');
         const initialScreen = document.getElementById('initialScreen');
-        const arScene = document.getElementById('sceneAR'); // Corrigido!
+        const arScene = document.getElementById('sceneAR');
+
+        let selectedCard = null;
+        let player1HP = 100;
+        let player2HP = 100;
+        let currentTurn = 1; // 1 para jogador 1, 2 para jogador 2
 
         playButton.addEventListener('click', () => {
             initialScreen.classList.add('hidden');
@@ -79,28 +110,111 @@
 
 
         function selectCard(element) {
-
-
             document.querySelectorAll('.card').forEach(card => {
                 card.classList.remove('selected');
             });
-
             element.classList.add('selected');
+            selectedCard = element;
+        }
+
+        function playCard() {
+            if (!selectedCard) {
+                alert('Selecione uma carta primeiro!');
+                return;
+            }
+
+
+            const cardType = selectedCard.getAttribute('data-type');
+            const animation = selectedCard.dataset.animation;
+
+            console.log(`Tocando animação: ${animation}`);
+
+            const attacker = currentTurn === 1 ?
+                document.querySelector('#character') :
+                document.querySelector('#character2');
+
+            const defender = currentTurn === 1 ?
+                document.querySelector('#character2') :
+                document.querySelector('#character');
+
+
+            attacker.setAttribute('animation-mixer', {
+                clip: animation,
+                loop: 'once',
+                clampWhenFinished: true
+            });
+
+            console.log(`Jogador ${currentTurn} jogou uma carta de tipo: ${cardType}`);
+
+
+            setTimeout(() => {
+                switch (cardType) {
+                    case 'attack':
+                        const damage = parseInt(selectedCard.dataset.damage);
+                        if (currentTurn === 1) {
+                            player2HP = Math.max(0, player2HP - damage);
+                        } else {
+                            player1HP = Math.max(0, player1HP - damage);
+                        }
+                        console.log(`Dano: ${damage}`);
+                        break;
+                }
+
+                updateHP();
+                checkGameOver();
+
+                currentTurn = currentTurn === 1 ? 2 : 1;
+                selectedCard.classList.remove('selected');
+                selectedCard = null;
+
+                // Volta para idle após animação
+                setTimeout(() => {
+                    attacker.setAttribute('animation-mixer', {
+                        clip: 'Idle',
+                        loop: 'repeat'
+                    });
+                }, 1500);
+            }, 500);
+        }
+
+        function updateHP() {
+            document.getElementById('hp1').style.width = player1HP + '%';
+            document.getElementById('hp2').style.width = player2HP + '%';
+        }
+
+        function checkGameOver() {
+            if (player1HP <= 0) {
+                alert('Player 2 venceu!');
+                resetGame();
+            } else if (player2HP <= 0) {
+                alert('Player 1 venceu!');
+                resetGame();
+            }
+        }
+
+        function resetGame() {
+            player1HP = 100;
+            player2HP = 100;
+            currentTurn = 1;
+            updateHP();
         }
 
         const character = document.querySelector('#character');
 
         character.addEventListener('model-loaded', () => {
-            character.setAttribute('animation-mixer', { clip: '4Combo_3', loop: 'repeat' });
-            console.log('Modelo carregado e animação iniciada.');
+            character.setAttribute('animation-mixer', { clip: '5Idle', loop: 'repeat' });
+            console.log('Personagem 1 carregado com Idle');
         });
 
         const character2 = document.querySelector('#character2');
 
         character2.addEventListener('model-loaded', () => {
-            character2.setAttribute('animation-mixer', { clip: '8Jump_sword', loop: 'repeat' });
-            console.log('Modelo carregado e animação iniciada.');
+            character2.setAttribute('animation-mixer', { clip: '5Idle', loop: 'repeat' });
+            console.log('Personagem 2 carregado com Idle');
         });
+
+
+
     </script>
 </body>
 
