--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
             <a-asset-item id="character1Asset" src="./assets/Player1multianimation.glb"></a-asset-item>
             <a-asset-item id="character2Asset" src="./assets/Player2multianimation.glb"></a-asset-item>
             <a-asset-item id="diceModel" src="./assets/d10.glb"></a-asset-item>
-            <a-asset-item id="greenEffects1" src="./assets/appearance_effect_light_beam.glb"></a-asset-item>
         </a-assets>
 
         <a-light type="directional" color="#ffffff" intensity="1.5" position="-0.71 1.6 1"></a-light>
@@ -190,7 +189,7 @@
 
             block: {
                 id: 'block',
-                name: 'Esquiva',
+                name: 'Bloqueio',
                 type: 'block',
                 animation: '5_standing_block_idle',
                 image: './assets/cards/bloqueio.png'
